<resources>
    <string name="app_name">SportMotor</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="todo">TODO</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="logo">TODO</string>
    <string name="marca">Marca</string>
    <string name="numero_bastidor">Numero Bastidor</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="a_adir_coche">Añadir Coche</string>
    <string name="coche_add">TODO</string>
    <string name="moto_add">TODO</string>
    <string name="coches">COCHES</string>
    <string name="motos">MOTOS</string>
    <string name="logo_menu">TODO</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="borrar">BORRAR</string>
    <string name="imagen_detalles_coche">TODO</string>
    <string name="imagen_detallesc">TODO</string>
    <string name="a_adir_moto">AÑADIR MOTO</string>
    <string name="img_detallesm">TODO</string>
    <string name="img_detalles_motom">TODO</string>
    <string name="bastidor"># Bastidor:</string>
    <string name="marca_rv">Marca:</string>
    <string name="modelo_rv">Modelo:</string>
    <string name="precio_rv">Precio:</string>
    <string name="img_rv_coche">TODO</string>
    <string name="agregar">AGREGAR</string>
    <string name="img_rv_moto">TODO</string>
    <string name="bastidorm"># Bastidor</string>
    <string name="salir">SALIR</string>
    <string name="img_logo_mostrarmoto">TODO</string>
    <string name="salir_coche">SALIR</string>
    <string name="imagen_detalles_coches">TODO</string>
    <string name="bryan_steven_pellicer_osorio">Bryan Steven Pellicer Osorio</string>
    <string name="github">GitHub</string>
    <string name="contacto">Contacto</string>
    <string name="bpellicerosorio_gmail_com">bpellicerosorio@gmail.com</string>
    <string name="_611276228">611276228</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nombre_nosotros">Nombre</string>
    <string name="desarrollador">Desarrollador</string>
    <string name="sport_motor">Sport Motor</string>
    <string name="url">TextView</string>
    <string name="nosotros">NOSOTROS</string>
    <string name="cerrar_sesion">CERRAR SESION</string>
</resources>