<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondorojo"
    tools:context=".MostrarDetallesCoche">

    <ImageView
        android:id="@+id/img_logo_detalles"
        android:layout_width="282dp"
        android:layout_height="178dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coche"
        android:contentDescription="@string/imagen_detalles_coche" />

    <EditText
        android:id="@+id/edt_detalles_nbastidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/numero_bastidor"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_detalles_marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_nbastidor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_nbastidor"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_nbastidor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_detalles_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_marca"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_marca"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_marca"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_detalles_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_detalles_modelo"
        app:layout_constraintStart_toStartOf="@+id/edt_detalles_modelo"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalles_modelo" />

    <ImageView
        android:id="@+id/img_detalles_coche"
        android:layout_width="193dp"
        android:layout_height="146dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coche"
        android:contentDescription="@string/imagen_detallesc" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#A8000000"
        android:onClick="actualizar_coche"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#A8000000"
        android:onClick="borrar_coche"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>