<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Menu">

    <Button
        android:id="@+id/btn_coches"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#0B00FF"
        android:onClick="coches"
        android:text="@string/coches"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_motos"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#0B00FF"
        android:onClick="motos"
        android:text="@string/motos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_coches"
        app:layout_constraintStart_toStartOf="@+id/btn_coches"
        app:layout_constraintTop_toBottomOf="@+id/btn_coches" />

    <ImageView
        android:id="@+id/img_logo_menu"
        android:layout_width="346dp"
        android:layout_height="286dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo"
        android:contentDescription="@string/logo_menu" />

    <Button
        android:id="@+id/btn_nosotros"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#0B00FF"
        android:text="@string/nosotros"
        android:onClick="Nosotros"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_motos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_motos"
        app:layout_constraintTop_toBottomOf="@+id/btn_motos" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bordes_boton"
        android:backgroundTint="#0B00FF"
        android:text="@string/cerrar_sesion"
        android:onClick="cerrar_cesion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_nosotros"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_nosotros"
        app:layout_constraintTop_toBottomOf="@+id/btn_nosotros" />
</androidx.constraintlayout.widget.ConstraintLayout>