<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="174dp"
        android:layout_margin="10dp"
        android:maxWidth="430dp"
        android:maxHeight="150dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_rv_bastidorm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bastidorm"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_marcam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/marca_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_modelom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/modelo_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_preciom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/precio_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_rv_moto"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_rv_moto"
            app:srcCompat="@drawable/moto" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>