<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="174dp"
        android:layout_margin="10dp"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="162dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_rv_bastidor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bastidor"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/marca_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/modelo_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_rv_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/precio_rv"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_rv_coche"
            android:layout_width="0dp"
            android:layout_height="161dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_rv_coche"
            app:srcCompat="@drawable/coche" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>